# MPCCT

./: CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  CaptureScreenshotsWidget.cpp  CaptureScreenshotsWidget.h  Draw.cpp  Draw.h  MainWindow.cpp  MainWindow.h  Project.cpp  Project.h  main.cpp  resources.qrc
